--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
         "type": "image/png"
       },
       {
-        "src": "src/img/manif.png",
+        "src": "src/img/favicon.png",
         "sizes": "512x512",
         "background_color" : "#4a3429",
         "type": "image/png"
